// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with backup completed 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
      "padding": 16,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            backupKey
          </Text>
        </View>
        <View
          style={
            Object {
              "alignContent": "center",
              "backgroundColor": "#FFF9EE",
              "borderRadius": 4,
              "justifyContent": "center",
              "marginTop": 16,
              "padding": 16,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": 16,
          }
        }
      >
        backupKeySummary
      </Text>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`renders correctly with backup not completed 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
      "padding": 16,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            backupKey
          </Text>
        </View>
        <View
          style={
            Object {
              "alignContent": "center",
              "backgroundColor": "#FFF9EE",
              "borderRadius": 4,
              "justifyContent": "center",
              "marginTop": 16,
              "padding": 16,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": 16,
          }
        }
      >
        backupKeySummary
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 16,
      }
    }
  >
    <AndroidSwitch
      accessibilityRole="switch"
      enabled={true}
      on={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      thumbTintColor="#EDEEEF"
      trackColorForFalse="#B4B9BD"
      trackColorForTrue="#1AB775"
      trackTintColor="#B4B9BD"
    />
    <Text
      onPress={[Function]}
      style={
        Object {
          "color": "#2E3338",
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
          "paddingLeft": 8,
        }
      }
    >
      savedConfirmation
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 100,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={false}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F1F0EB",
            "flexGrow": 1,
            "height": 48,
            "justifyContent": "center",
            "opacity": undefined,
            "paddingHorizontal": 24,
            "paddingVertical": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          global:continue
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`still renders when mnemonic doesnt show up 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
      "padding": 16,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            backupKey
          </Text>
        </View>
        <View
          style={
            Object {
              "alignContent": "center",
              "backgroundColor": "#FFF9EE",
              "borderRadius": 4,
              "justifyContent": "center",
              "marginTop": 16,
              "padding": 16,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": 16,
          }
        }
      >
        backupKeySummary
      </Text>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
